--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,15 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
     //id 'kotlin-android'
     //id 'com.google.gms.google-services'
 }
+
+apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: 'com.google.gms.google-services'
 
 //generar enlace entre la vista y el codigo
 android.buildFeatures.viewBinding true
@@ -61,4 +67,23 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Se agregan para poder utilizar las anotaciones @Entity Lugar y demás
+    annotationProcessor 'androidx.room:room-compiler:2.4.3'
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation 'androidx.room:room-ktx:2.4.3'
+
+    //Navegación entre fragmentos
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.2"
+
+    //Para clases más adelante  gps y cámara
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation 'androidx.camera:camera-camera2:1.1.0'
+
+    //Para clases más adelante usar imágenes y RecyclerView
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
+
 }
