--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,44 +46,42 @@ android {
 
 dependencies {
 
-    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    //implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 // Import the BoM for the Firebase platform
-    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+
 // Add the dependency for the Firebase Authentication library
 // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-auth-ktx'
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth:21.0.2'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
-    implementation 'com.google.firebase:firebase-common-ktx:20.1.2'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation platform('com.google.firebase:firebase-bom:30.3.1')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //Se agregan para poder utilizar las anotaciones @Entity Lugar y demás
-    annotationProcessor 'androidx.room:room-compiler:2.4.3'
-    kapt "androidx.room:room-compiler:2.4.3"
-    implementation 'androidx.room:room-ktx:2.4.3'
+    //implementation 'com.google.firebase:firebase-common-ktx:20.2.0'
+
+    //Firebase database
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     //Navegación entre fragmentos
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.3"
 
     //Para clases más adelante  gps y cámara
-    implementation 'com.google.android.gms:play-services-location:20.0.0'
-    implementation 'androidx.camera:camera-camera2:1.1.0'
+    //implementation 'com.google.android.gms:play-services-location:20.0.0'
+    //implementation 'androidx.camera:camera-camera2:1.1.0'
 
     //Para clases más adelante usar imágenes y RecyclerView
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'jp.wasabeef:glide-transformations:4.3.0'
+    //implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
 }
